--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form 1</title>
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <title>Veri Form</title>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 </head>
 <body class="container">
   <div id="app" class="row bg-light mt-5 p-3" >
