--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-
+            <div class="row justify-content-end mx-1">
+              <button type="button" class="btn btn-sm btn-success col-2 mb-2" onclick="newFormElement()">Yeni Ekle</button>
+            </div>
              <!-- accordion -->
             <div class="accordion" id="accordionExample">
                   <accordion-item></accordion-item>
